--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,6 @@
 }
 
 .sidebar ul li {
-  position: relative;
   padding-left: 10px;
   margin-top: 5px;
   width: 100%;
@@ -34,11 +33,10 @@
 }
 
 .sidebar ul li:hover {
-  background-color: rgb(33, 118, 197);
+  background-color: rgb(6, 11, 56);
 }
 
 .sidebar ul li .a {
-  position: relative;
   display: block;
   width: 100%;
   display: flex;
@@ -46,7 +44,6 @@
 }
 
 .sidebar ul li Link .icon {
-  position: relative;
   display: block;
   min-width: 50px;
   height: 50px;
@@ -74,7 +71,7 @@
 }
 
 .bg-next-event {
-  background-color: #8dcaf7;
+  background-color: rgb(6, 11, 56);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='700' height='100' preserveAspectRatio='none' viewBox='0 0 700 100'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1487%26quot%3b)' fill='none'%3e%3cpath d='M 0%2c46 C 70%2c53.8 210%2c86.2 350%2c85 C 490%2c83.8 630%2c49 700%2c40L700 100L0 100z' fill='rgba(25%2c 78%2c 123%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1487'%3e%3crect width='700' height='100' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
   background-size: cover;
   background-repeat: no-repeat;
@@ -83,14 +80,18 @@
 }
 
 .max-height {
-  height: 400px;
+  max-height: 400px;
   overflow: hidden;
 }
 
+.about-border {
+  margin-top: -10px;
+  border: 4px solid rgb(19, 46, 87);
+}
+
 .heading {
-  padding: 5px 20px;
+  padding: 10px 0;
   background-color: rgb(19, 46, 87);
-  margin-bottom: 10px;
   color: white;
 }
 
